second inverting change